# ambara

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.chatbot  LICENSE  PITCH.md  README.md  RELEASE_NOTES.md  REPO_FILE_GUIDE.md  checkpoint.py  docker-compose.gpu.yml  docker-compose.yml  gamma_presentation_prompt.md  tauri-ui
.agent/: bootstrap.md  files.txt  loop_log.md  next.md
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  tests.yml
chatbot/: models.py  requirements.txt
chatbot/api/: intent_classifier.py  main.py  models.py  session.py  startup.sh
chatbot/corpus/: embedder.py  examples.json  extractor.py  graph_schema.json  schema_validator.py
chatbot/generation/: agent.py  connector.py  graph_generator.py  graph_generator_legacy.py  graph_validator.py  llm_client.py  planner.py  prompt_builder.py  repair_prompt_builder.py  selector.py  tools.py
chatbot/retrieval/: code_retriever.py  example_retriever.py  retriever.py
chatbot/scripts/: smoke_test.sh
chatbot/tests/: test_agent.py  test_api.py  test_code_retriever.py  test_connector.py  test_corpus.py  test_e2e.py  test_generation.py  test_hallucination.py  test_llm_providers.py  test_llm_retry.py  test_llm_timeouts.py  test_repair_loop.py  test_retrieval.py  test_session.py
docs/: FEATURES_MANUAL.md  chatbot-dacp.md  chatbot-quickstart.md  chatbot-system.md  external-api.md  roadmap-chatbot.md
papers/: 01_react_reasoning_acting.md  02_chain_of_thought.md  03_hugginggpt_task_planning.md  04_toolformer.md  05_gorilla_api_calls.md  06_taskweaver_and_toolbench.md  07_synthesis_and_design.md  08_small_model_prompt_refining.md
plugins/comfyui_bridge/: Cargo.toml  ambara-plugin.toml
plugins/comfyui_bridge/src/: lib.rs
scripts/: auto_loop.py  probe_env.sh  screenshotter.py  verify_completion.sh
src/: lib.rs  main.rs
src/core/: batch.rs  chunked.rs  context.rs  error.rs  gpu.rs  mod.rs  node.rs  port.rs  types.rs
src/execution/: cache.rs  engine.rs  mod.rs  progress.rs
src/filters/: mod.rs  registry.rs
src/filters/builtin/: api.rs  array.rs  astro.rs  batch.rs  blur.rs  color.rs  comfyui.rs  comparison.rs  composite.rs  constants.rs  conversion.rs  draw.rs  edge.rs  io.rs  math.rs  mod.rs  noise.rs  sharpen.rs  text.rs  transform.rs  utility.rs
src/graph/: connection.rs  mod.rs  serialization.rs  structure.rs  topology.rs
src/plugins/: api.rs  error.rs  health.rs  loader.rs  manifest.rs  mod.rs  registry.rs  sandbox.rs
src/validation/: mod.rs  pipeline.rs  stages.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
ui/src/api/: commands.ts
ui/src/components/: ConfirmDialog.css  ConfirmDialog.tsx  Toast.css  Toast.tsx
ui/src/components/canvas/: GraphCanvas.css  GraphCanvas.tsx
ui/src/components/chat/: ChatPanel.css  ChatPanel.tsx  GraphPreviewCard.tsx
ui/src/components/chat/__tests__/: ChatPanel.test.tsx
ui/src/components/nodes/: FilterNode.css  FilterNode.tsx  PreviewNode.css  PreviewNode.tsx  ValueDisplayNode.css  ValueDisplayNode.tsx
ui/src/components/sidebar/: FilterPalette.css  FilterPalette.tsx  PluginPanel.css  PluginPanel.tsx  PropertiesPanel.css  PropertiesPanel.tsx  Settings.css  Settings.tsx
ui/src/hooks/: useChatApi.ts  useToast.ts
ui/src/store/: graphStore.ts  settingsStore.ts
ui/src/types/: index.ts
